fix alignment nav buttons

--- a/content/scss/_c-pill-navigation.scss
+++ b/content/scss/_c-pill-navigation.scss
@@ -24,6 +24,7 @@
   background: none;
   border: none;
   position: relative;
+  margin: 0;
   cursor: pointer;
   line-height: 1.5;
   &:after {
